--- a/templates/login.html
+++ b/templates/login.html
@@ -122,15 +122,15 @@
     <div class="login-container">
         <h2>Welcome Back</h2>
 
-        <form>
+        <form method="POST" action="{{ url_for('home') }}">
             <div class="input-group">
                 <label>Username</label>
-                <input type="text" placeholder="Enter username" required>
+                <input type="text" name="username" placeholder="Enter username" required>
             </div>
 
             <div class="input-group">
                 <label>Password</label>
-                <input type="password" placeholder="Enter password" required>
+                <input type="password" name="password" placeholder="Enter password" required>
             </div>
 
             <button class="login-btn" type="submit">Login</button>
