--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -94,7 +94,7 @@
 </style>
 
 <nav class="main-navbar">
-    <a href="/home" class="main-logo">Shop<span>Ease</span></a>
+    <a href="{{ url_for('home') }}" class="main-logo">Shop<span>Ease</span></a>
 
     <div class="main-search">
         <input type="text" placeholder="Search products...">
