--- a/templates/home.html
+++ b/templates/home.html
@@ -184,7 +184,7 @@
 <section class="hero">
     <h1>Welcome to ShopEase</h1>
     <p>Your one-stop destination for quality products at the best prices</p>
-    <a href="{{ url_for('login') }}"><button>Get Started</button></a>
+    <a href="{{ url_for('dashboard') }}"><button>Get Started</button></a>
 </section>
 
 <section class="features">
